--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Baumans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
 :root {
   --white: hsl(0, 0%, 100%);
@@ -11,6 +10,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto Slab', sans-serif;
+  font-size: 1.25rem;
 }
 
 a {
@@ -21,20 +22,25 @@ a {
 }
 
 /* Main Content Styling */
-main {
+/* main {
   font-family: 'Baumans', sans-serif;
   font-size: 1.25rem;
-}
+} */
 
 /* Header Styling */
 header {
-  /* position: fixed;
-  width: 100%; */
+  position: fixed;
+  width: 100%;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: hsl(0, 0%, 100%);
   padding: 2rem 1rem;
+}
+
+.header-color {
+  background-color: black;
 }
 
 .logo-wrapper {
@@ -117,8 +123,8 @@ header .socials > div:hover {
   color: hsl(201, 100%, 35%);
 }
 
-.skype:hover {
-  color: hsl(196, 100%, 47%);
+.whatsapp:hover {
+  color: hsl(150, 71%, 49%);
 }
 
 .facebook:hover {
@@ -241,7 +247,7 @@ section.services > div {
 
 #services-header {
   position: relative;
-  padding: 2rem;
+  padding: 1.5rem 2rem;
   background-color: var(--magenta);
   color: var(--white);
   border-radius: 50px;
